--- a/app/assets/stylesheets/cutom.css.scss
+++ b/app/assets/stylesheets/cutom.css.scss
@@ -1,3 +1,6 @@
+/*This file for CSS and refers to all the classes created in the layouts folder>*/
+
+
 $navbar-default-bg: #312312;
 $light-orange: #ff8c00;
 $navbar-default-color:$light-orange;
